[package]
name = "tron-wallet-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bip39 = "2.0.0"
bs58 = "0.5.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
secp256k1 = "0.29.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.17", features = ["derive"] }
ripemd = "0.1.3"
blake3 = "1.5.4"
tiny-hderive = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
